# speakflow

./: .gitignore  docker-compose.yml  package.json  tsconfig.json
.claude/agents/: speakflow-frontend-designer.md
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 20240118_0001_001_initial_schema.py
api/app/: __init__.py  main.py
api/app/core/: __init__.py  config.py  database.py  queue.py  security.py  storage.py
api/app/models/: __init__.py  session.py  user.py
api/app/routes/: __init__.py  auth.py  health.py  sessions.py
apps/mobile/: App.tsx  app.json  package.json  tailwind.config.js
apps/mobile/.expo/types/: router.d.ts
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/app/(app)/: _layout.tsx  daily.tsx  history.tsx  profile.tsx
apps/mobile/app/(auth)/: _layout.tsx  login.tsx  register.tsx
apps/mobile/components/: BreathCircle.tsx
apps/mobile/src/services/: api.ts
apps/web/: package.json  tailwind.config.ts
contracts/: pyproject.toml
contracts/fixtures/: example_coaching_response.json  example_score_contract.json  speakflow_v1_drills.json
contracts/python/: __init__.py  coaching_response.py  drill_schema.py  score_contract.py
contracts/schemas/: coaching_response.json  drill_schema.json  score_contract.json
contracts/speakflow_contracts/: __init__.py  coaching_response.py  drill_schema.py  score_contract.py
contracts/tests/: test_contracts.py
docs/: ARCHITECTURE.md
mobile/: package.json
mobile/src/hooks/: useAudioRecorder.ts
mobile/src/screens/: ReportScreen.tsx
mobile/src/types/: contracts.ts
scripts/: integration_test.py
web/: package.json  tailwind.config.ts
web/src/components/: BreathCircle.tsx  MetricChip.tsx  OnboardingSlide.tsx  RecordButton.tsx  SoftRingScore.tsx  index.ts
web/src/lib/: mock-data.ts
web/src/types/: index.ts
worker/: Dockerfile  pyproject.toml
worker/app/: __init__.py  config.py  worker.py
worker/app/core/: database.py  storage.py
worker/app/models/: __init__.py  session.py
worker/app/processors/: __init__.py  asr.py  features.py  scoring.py
worker/app/services/: __init__.py  coaching.py
worker/tests/: test_scoring.py
(+24 files in other folders)
