[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speakflow-contracts"
version = "1.0.0"
description = "Shared contracts for SpeakFlow API and Worker"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jsonschema>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["speakflow_contracts"]
